refactor: Exceptions and filters refactor